/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import "mesos.proto";

package mesos.containerizer;


/**
 * Information about a containerized task launch.
 */
message Launch {
  required ContainerID container_id = 1;
  required TaskInfo task = 2;
  required FrameworkID framework_id = 3;
  required string directory = 4;
  optional string user = 5;
  required SlaveID slave_id = 6;
  required string slave_pid = 7;
  required bool checkpoint = 8;
  optional string mesos_executor_path = 9;
}


/**
 * Information about a containerized task update.
 */
message Update {
  required ContainerID container_id = 1;
  repeated Resource resources = 2;
}
